# Ensemble-Learning-with-Decision-Trees

./: CMakeLists.txt  README.md
data/data_base/: sample_100_rows.csv  sample_400_rows.csv
data/data_clean/: cleaned_15k_ga_adaptive.csv  cleaned_15k_hvs.csv  cleaned_15k_random.csv  cleaned_30k_ga_adaptive.csv  cleaned_data.csv
include/app/: BaggingApp.hpp  SingleTreeApp.hpp
include/boosting/app/: RegressionBoostingApp.hpp
include/boosting/dart/: IDartStrategy.hpp  UniformDartStrategy.hpp
include/boosting/loss/: AbsoluteLoss.hpp  HuberLoss.hpp  IRegressionLoss.hpp  QuantileLoss.hpp  SquaredLoss.hpp
include/boosting/model/: RegressionBoostingModel.hpp
include/boosting/strategy/: GradientRegressionStrategy.hpp
include/boosting/trainer/: GBRTTrainer.hpp
include/criterion/: HuberCriterion.hpp  LogCoshCriterion.hpp  MAECriterion.hpp  MSECriterion.hpp  PoissonCriterion.hpp  QuantileCriterion.hpp
include/ensemble/: BaggingTrainer.hpp  MPIBaggingTrainer.hpp
include/finder/: AdaptiveEQFinder.hpp  AdaptiveEWFinder.hpp  ExhaustiveSplitFinder.hpp  HistogramEQFinder.hpp  HistogramEWFinder.hpp  QuartileSplitFinder.hpp  RandomSplitFinder.hpp
include/functions/io/: DataIO.hpp
include/histogram/: PrecomputedHistograms.hpp
include/lightgbm/app/: LightGBMApp.hpp
include/lightgbm/core/: LightGBMConfig.hpp
include/lightgbm/feature/: FeatureBundler.hpp
include/lightgbm/model/: LightGBMModel.hpp
include/lightgbm/sampling/: GOSSSampler.hpp
include/lightgbm/trainer/: LightGBMTrainer.hpp
include/lightgbm/tree/: LeafwiseTreeBuilder.hpp
include/pipeline/: DataSplit.hpp
include/preprocessing/: DataCleaner.hpp
include/pruner/: CostComplexityPruner.hpp  MinGainPrePruner.hpp  NoPruner.hpp  ReducedErrorPruner.hpp
include/tree/: IPruner.hpp  ISplitCriterion.hpp  ISplitFinder.hpp  ITreeTrainer.hpp  Node.hpp
include/tree/trainer/: SingleTreeTrainer.hpp
include/xgboost/app/: XGBoostApp.hpp
include/xgboost/core/: XGBoostConfig.hpp
include/xgboost/criterion/: XGBoostCriterion.hpp
include/xgboost/finder/: XGBoostSplitFinder.hpp
include/xgboost/loss/: XGBoostLossFactory.hpp
include/xgboost/model/: XGBoostModel.hpp
include/xgboost/trainer/: XGBoostTrainer.hpp
main/: CMakeLists.txt
main/bagging/: main.cpp
main/data_clean/: main.cpp
main/gbrt/: main.cpp
main/lightgbm/: main.cpp
main/mpi_bagging/: CMakeLists.txt  main.cpp
main/single_tree/: main.cpp
main/xgboost/: main.cpp
script/: env_config.sh
script/bagging/: bagging_comparison.sh  strong_scaling_comparison.sh  test_bagging_parallel.sh  test_bagging_strong_scaling.sh  test_bagging_weak_scaling.sh  weak_scaling_comparison.sh
script/boosting/gbrt/: test_gbrt_parallel.sh  test_gbrt_single.sh  test_gbrt_strong_scaling.sh  test_gbrt_weak_scaling.sh
script/boosting/gbrt_dart/: test_gbrt_dart_parallel.sh  test_gbrt_dart_single.sh  test_gbrt_dart_strong_scaling.sh
script/single_tree/: test_singletree_strong_scaling.sh  test_singletree_weak_scaling.sh
src/: CMakeLists.txt
src/app/: BaggingApp.cpp  CMakeLists.txt  SingleTreeApp.cpp
src/boosting/: CMakeLists.txt
src/boosting/app/: RegressionBoostingApp.cpp
src/boosting/dart/: UniformDartStrategy.cpp
src/boosting/loss/: IRegressionLoss.cpp
src/boosting/strategy/: GradientRegressionStrategy.cpp
src/boosting/trainer/: GBRTTrainer.cpp
src/functions/io/: CMakeLists.txt  DataIO.cpp
src/histogram/: CMakeLists.txt  PrecomputedHistograms.cpp
src/lightgbm/: CMakeLists.txt
src/lightgbm/app/: LightGBMApp.cpp
src/lightgbm/feature/: FeatureBundler.cpp
src/lightgbm/sampling/: GOSSSampler.cpp
src/lightgbm/trainer/: LightGBMTrainer.cpp
src/lightgbm/tree/: LeafwiseTreeBuilder.cpp
src/pipeline/: CMakeLists.txt  DataSplit.cpp
src/preprocessing/: CMakeLists.txt  DataCleaner.cpp
src/tree/: CMakeLists.txt
src/tree/criterion/: HuberCriterion.cpp  LogCoshCriterion.cpp  MAECriterion.cpp  MSECriterion.cpp  PoissonCriterion.cpp  QuantileCriterion.cpp
src/tree/ensemble/: BaggingTrainer.cpp  MPIBaggingTrainer.cpp
src/tree/finder/: AdaptiveEQFinder.cpp  AdaptiveEWFinder.cpp  ExhaustiveSplitFinder.cpp  HistogramEQFinder.cpp  HistogramEWFinder.cpp  QuartileSplitFinder.cpp  RandomSplitFinder.cpp
src/tree/pruner/: CostComplexityPruner.cpp  MinGainPrePruner.cpp  NoPruner.cpp  ReducedErrorPruner.cpp
src/tree/trainer/: SingleTreeTrainer.cpp
src/xgboost/: CMakeLists.txt
src/xgboost/app/: XGBoostApp.cpp
src/xgboost/finder/: XGBoostSplitFinder.cpp
src/xgboost/loss/: XGBoostLossFactory.cpp
src/xgboost/trainer/: XGBoostTrainer.cpp
